syntax = "proto3";
package pipe;
option java_package = "org.pipeapp.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message MessageData {
  int64 chatId = 1;
  optional int64 replyTo = 2;
  string text = 3;
}

message SentMessage {
  int64 id = 1;
  int64 senderId = 2;
  int64 timestamp = 3;
  MessageData data = 4;
}

message ChatData {
  int64 id = 1;
  int64 firstUser = 2;
  int64 secondUser = 3;
  SentMessage lastMessage = 4;
}

message CreateChatRequest {
  int64 partnerId = 1;
  string message = 2;
}

message ListMessagesRequest {
  int64 chatId = 1;
  int64 offset = 2;
}

service ChatService {
  rpc listChats (google.protobuf.Empty) returns (stream ChatData);
  rpc createChat (CreateChatRequest) returns (ChatData);
  rpc deleteChat (google.protobuf.Int64Value) returns (google.protobuf.Empty);
  rpc listMessages (ListMessagesRequest) returns (stream SentMessage);
  rpc sendMessage (MessageData) returns (SentMessage);
  rpc deleteMessage (google.protobuf.Int64Value) returns (google.protobuf.Empty);
}